# readgpt

./: .env.example  .pre-commit-config.yaml  LICENSE.md  README.md  main.py  pyproject.toml  render.yaml  ruff.toml
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: article-summarizer.js  globals.css  header.js  layout.js  main.js  page.js  suggested-articles.js  summary.js
frontend/src/components/: alert.jsx  badge.jsx  button.jsx  checkbox.jsx  dialog.jsx  dropdown.jsx  fieldset.jsx  input.jsx  link.jsx  listbox.jsx  pagination.jsx  radio.jsx  select.jsx  sidebar-layout.jsx  sidebar.jsx  spinner.jsx  stacked-layout.jsx  switch.jsx  table.jsx  text.jsx  textarea.jsx
frontend/src/pages/: summary.js
